--- a/Wordle/DO_NOT_MODIFY/Base.lproj/LaunchScreen.storyboard
+++ b/Wordle/DO_NOT_MODIFY/Base.lproj/LaunchScreen.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="app-icon" translatesAutoresizingMaskIntoConstraints="NO" id="0EC-m3-eLb">
-                                <rect key="frame" x="128" y="362" width="137" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="launch-img" translatesAutoresizingMaskIntoConstraints="NO" id="IcR-Nf-XL2">
+                                <rect key="frame" x="16" y="361" width="361" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -32,7 +32,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="app-icon" width="45" height="45"/>
+        <image name="launch-img" width="807" height="130"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
